# phishsite-spammer1

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: consts.rs  datastruct.rs  init.rs  main.rs  rands.rs
