[package]
name = "phishsite-spammer1"
version = "0.1.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
fake = "2.9.2"
phonenumber = "0.3.3"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
